feat: improve league creation and management
